# somebot-rs

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: alltime_util.rs  commands.rs  main.rs  prelude.rs  routes.rs  util.rs
src/commands/: eight_ball.rs  hello_world.rs  ping.rs  resize.rs
src/static_data/: privacy_policy.txt  tos.txt
static/: privacy_policy.txt  tos.txt
static/public/: index.html  styles.css
