[package]
name = "proxxa-somebot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.22.0"
shuttle-runtime = "0.22.0"
shuttle-secrets = "0.22.0"
tracing = "0.1.37"
tokio = "1.26.0"
rand = "0.8.5"
shuttle-rocket = "0.22.0"
rocket = "=0.5.0-rc.3"
chrono = "0.4.26"
once_cell = "1.18.0"
shuttle-static-folder = "0.22.0"
