[package]
name = "proxxa-somebot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
tracing = "0.1.37"
tokio = "1.26.0"
rand = "0.8.5"
chrono = "0.4.26"
once_cell = "1.18.0"
reqwest = "0.11.18"
image = "0.24.6"
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
shuttle-poise = "0.34.0"
rocket = "=0.5.0"
lazy_static = "1.4.0"

[build-dependencies]
reqwest = "0.11.18"
tokio = { version = "1.26.0", features = ["full"] }
